Fixed spritey blog link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ To get fuller details on my qualifications you can download my résumé under th
       <br />
       <b>Links</b><br />
       <small>
-        <a href="http://bykovskyy.com/spritey/blog">+ Blog</a><br />
+        <a href="http://bykovskyy.com/spritey">+ Blog</a><br />
         <a href="http://github.com/mbykovskyy/spritey">+ Github</a><br />
 		<a href="http://www.pivotaltracker.com/projects/95676">+ PivotalTracker</a>
       </small>
